<resources>
    <string name="app_name">كنز العرب</string>
    <string name="poet">Poet</string>
    <string name="guest">Guest</string>
    <string name="all_rights_are_save_fares_al_roya_2023">All Rights Are Save - Fares AL-Roya @ 2023</string>
    <string name="log_in">Log in</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username_phone_number">Username / Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_information">Enter Information</string>
    <string name="enter_your_personal_information_below_then_click_next_to_continue_registration">Enter your personal information below, then click “Next” to continue registration.</string>
    <string name="individual_poet">Individual Poet</string>
    <string name="squad">Squad</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="next">Next</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="squad_name">Squad Name</string>
    <string name="enter_country_of_living">Enter Country Of Living</string>
    <string name="enter_type_of_activity">Enter Type of Activity</string>
    <string name="squad_members_count">Squad Members Count</string>
    <string name="enter_your_personal_information_below_then_click_next_to_continue_registration_">Enter your personal information below, then click “Next” to continue registration.</string>
    <string name="activities_type">Activities Type</string>
    <string name="choose_your_favorite_activities_type">Choose your favorite activities type</string>
    <string name="choose_all">Choose All</string>
    <string name="enter_information_below_then_click_create_account">Enter information below, then click “Create Account” .</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_optional">Email</string>
    <string name="change_password">Change Password</string>
    <string name="phone_number_email">Phone Number / Email</string>
    <string name="send_code">Send Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_the_code_sent_to_n_s">Enter the code sent to \n$S</string>
    <string name="verify">Verify</string>
    <string name="resend">resend</string>
    <string name="set_new_password">Set New Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_the_new_password">Re-enter the New Password</string>
    <string name="your_channel">Your Channel</string>
    <string name="account_settings">Account Settings</string>
    <string name="set_change_image">Set/Change Image</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="nationality">Nationality</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="record_video">Record Video</string>
    <string name="upload_video">Upload Video</string>
    <string name="ahmed_isaa">Ahmed Isaa</string>
    <string name="ahmed302">\@ahmed302</string>
    <string name="personal_data">Personal Data</string>
    <string name="more_information">More Information</string>
    <string name="registration">Registration</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="city_of_residence">City of residence</string>
    <string name="place_of_residence">Place of residence</string>
    <string name="gender">Gender</string>
    <string name="band_name">Band Name</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="uplaode">Uplaode</string>
    <string name="cagtegory">Cagtegory</string>
    <string name="no_data">لا يوجد بيانات\n</string>
    <string name="application_id">Application ID</string>
    <string name="user_id">User ID</string>
    <string name="access_token_optional">Access token (optional)</string>
    <string name="sdk">SDK</string>
    <string name="live_events">Live events</string>
    <string name="my_settings">My settings</string>
    <string name="go_live">Go live</string>
    <string name="no_live_events">No live events</string>
    <string name="new_live_event">New live event</string>
    <string name="sign_out">Sign out</string>
    <string name="bottom_navigation_bar_live_events">Live events</string>
    <string name="bottom_navigation_bar_my_settings">My settings</string>
    <string name="live_event_information">Live event information</string>
    <string name="host">Host</string>
    <string name="hosts">Hosts</string>
    <string name="participant">Participant</string>
    <string name="participants">Participants</string>
    <string name="freeze_chat">Freeze chat</string>
    <string name="freeze_channel_description">Only operators can send a message. This doesn\&#39;t stop the live event.</string>
    <string name="live_event_id">Live event ID</string>
    <string name="created_on">Created on</string>
    <string name="created_by">Created by</string>
    <string name="started_on">Started on</string>
    <string name="started_by">Started by</string>
    <string name="you">You</string>
    <string name="create">Create</string>
    <string name="add_a_title">Add a title</string>
    <string name="live_event_create_event_users_for_host">Users who can be host</string>
    <string name="take_photo">Take photo</string>
    <string name="photo_library">Choose photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="enter">Enter</string>
    <string name="live_event">Live event</string>
    <string name="upcoming">UPCOMING</string>
    <string name="start">Start</string>
    <string name="open">OPEN</string>
    <string name="live">LIVE</string>
    <string name="ended">ENDED</string>
    <string name="camera">Camera</string>
    <string name="camera_device_back">Back</string>
    <string name="camera_device_front">Front</string>
    <string name="camera_device_external">External</string>
    <string name="camera_device_unknown">Unknown</string>
    <string name="audio_device">Audio device</string>
    <string name="audio_device_earpiece">Earpiece</string>
    <string name="audio_device_speakerphone">Speakerphone</string>
    <string name="audio_device_wired_headset">Wired headset</string>
    <string name="audio_device_bluetooth">Bluetooth</string>
    <string name="max_host_count">You can add up to 10 users.\nOnly 6 of these users can enter a broadcast.</string>
    <string name="participant_count_affix">%s participants</string>
    <string name="watching_count_affix">%s watching</string>
    <string name="live_event_title_affix">%s\&#39;s audio live</string>
    <string name="banner_message_live_event_ready">Live event will begin soon.</string>
    <string name="banner_message_live_event_ended">Live event has ended.</string>
    <string name="banner_message_host_disconnected">Host is temporarily unavailable.</string>
    <string name="banner_message_host_muted">Host is muted.</string>
    <string name="dialog_message_choose_your_role">Choose your role</string>
    <string name="dialog_message_host_end">End live event?</string>
    <string name="dialog_message_host_do_end">End live event</string>
    <string name="dialog_message_host_do_exit">Exit without ending</string>
    <string name="dialog_message_host_cancel">Cancel</string>
    <string name="dialog_message_live_event_information_change_event_title">Change event title</string>
    <string name="dialog_message_live_event_information_change_event_title_placeholder">Enter title</string>
    <string name="dialog_message_live_event_information_change_event_cover_image">Change cover image</string>
    <string name="dialog_message_take_photo">Take photo</string>
    <string name="dialog_message_photo_library">Choose photo</string>
    <string name="dialog_message_remove_photo">Remove photo</string>
    <string name="dialog_message_choose_photo">Choose photo</string>
    <string name="dialog_message_host">Hosts</string>
    <string name="dialog_message_add_user">Add user</string>
    <string name="dialog_message_enter_user_id">Enter user ID</string>
    <string name="summary_total_participants">Total participants</string>
    <string name="summary_peak_concurrent_participants">Peak concurrent participants</string>
    <string name="summary_duration">Duration</string>
    <string name="error_message_enter_the_app_id">Please enter the Application ID.</string>
    <string name="error_message_enter_the_user_id">Please enter the User ID.</string>
    <string name="error_message_sign_in">Sign in failed. Please check your information and try again.</string>
    <string name="error_message_ended_enter_dialog_description">Can\&#39;t enter an ended live event.</string>
    <string name="error_message_created_enter_dialog_description">This live event will open soon.</string>
    <string name="error_message_error_description">Something went wrong. Try again.</string>
    <string name="permission_dialog_granted">Permission granted</string>
    <string name="permission_dialog_title">Allow permission</string>
    <string name="permission_dialog_message_for_camera">"Sendbird Live" Would Like to Access the Camera\n This will allow you to use camera in a live event.</string>
    <string name="permission_dialog_message_for_camera_and_audio">"Sendbird Live" Would Like to Access the Camera and Audio\n This will allow you to use camera and audio in a live event.</string>
    <string name="permission_dialog_apply">OK</string>
    <string name="permission_dialog_deny">Don\&#39;t Allow</string>
    <string name="permission_dialog_denied_title">Allow permission</string>
    <string name="permission_dialog_denied_message">To allow %1$s to use %2$s, go to App info</string>
    <string name="permission_dialog_denied_apply">App info</string>
    <string name="permission_dialog_denied_deny">Cancel</string>
    <string name="permission_text_camera">CAMERA</string>
    <string name="permission_text_record_audio">RECORD AUDIO</string>
    <string name="permission_text_call_phone">CALL PHONE</string>
    <string name="permission_text_read_phone_state">READ PHONE STATE</string>
    <string name="permission_text_bluetooth_admin">BLUETOOTH ADMIN</string>
    <string name="permission_text_bluetooth">BLUETOOTH</string>
    <string name="permission_text_bluetooth_connect">BLUETOOTH CONNECT</string>
    <string name="permission_text_unknown">etc</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="username">Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="i_agree_to_the_terms_and_conditions_and_acknowledge_my_use_of_this_application_to_comply_with_the_seller_s_terms_policies_and_guidelines">I agree to the terms and conditions, and acknowledge my use of this application to comply with the seller\'s terms, policies and guidelines.</string>
    <string name="please_enter_the_code_sent_to_your_phone_number_s">Please Enter The Code Sent to your Phone Number %S</string>
    <string name="enter_confimation_number">Enter Confimation Number</string>
</resources>