<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegistrationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_back_water_mark"
        android:scaleType="centerCrop"
        />
    <include
        layout="@layout/registration_app_bar"
        android:id="@+id/include_tap"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/registreation_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="-200dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/include_tap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progressBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="150sp"
            android:layout_marginLeft="15dp"
            android:layout_height="150sp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:visibility="gone"
            android:layout_gravity="center"/>
<!--            app:lottie_rawRes="@raw/loading"-->
<!--            />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >
            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/step_indecator_2"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_personal_information_below_then_click_next_to_continue_registration_"
                android:textSize="12sp"
                android:textColor="@color/lightGreen"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activities_type"
                android:textSize="12sp"
                android:textColor="@color/brown"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_your_favorite_activities_type"
                android:textSize="11sp"
                android:textStyle="bold"
                android:layout_marginTop="3dp"
                />

            <TextView
                android:id="@+id/chooseAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="3dp"
                android:text="@string/choose_all"
                android:textColor="@color/green"
                android:textSize="11sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activitiesRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_outlined_rectangel"
                android:padding="10dp"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:spanCount="3"
                tools:listitem="@layout/activities_count_items"
                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                android:backgroundTint="@color/green"
                android:textColor="@color/white"
                android:text="@string/next"
                android:textAllCaps="false"
                app:icon="@drawable/forword"
                app:iconSize="15dp"
                app:iconGravity="textEnd"
                android:layout_marginTop="20dp"
                />
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    />
                <TextView
                    android:id="@+id/signInBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/green"
                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>