<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegistrationActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_back_water_mark"
        android:scaleType="centerCrop"
        />
    <include
        layout="@layout/registration_app_bar"
        android:id="@+id/include_tap"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/registreation_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="-200dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/include_tap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >
            <TextView
                android:id="@+id/some_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_code"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textColor="@color/brown"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                />

            <LinearLayout
                android:id="@+id/squadLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_the_code_sent_to_n_s"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textColor="@color/brown"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/otpEt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/verify"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                android:backgroundTint="@color/green"
                android:textColor="@color/white"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"/>
            <!--                app:icon="@drawable/forword"-->
            <!--                app:iconSize="15dp"-->
            <!--                app:iconGravity="textEnd"-->

            <!--                />-->
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/grey"
                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>